fixed overflow and thumbnail

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -41,7 +41,7 @@
     
     
     #title {
-      font-size: 1.5rem;
+      font-size: 1.rem;
       font-weight: 700;
       color: var(--spotify-light);
       margin-bottom: 0.5rem;
