--- a/src/stylesheets/search.css
+++ b/src/stylesheets/search.css
@@ -573,7 +573,7 @@
 @media (min-width: 769px) {
   #searchlist {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 24px;
     padding: 2rem;
     width: 90%;
@@ -600,3 +600,4 @@
     padding: 1.5rem;
   }
 }
+
